--- a/Task_HelloWorld/index.html
+++ b/Task_HelloWorld/index.html
@@ -7,5 +7,6 @@
 
   <body style="margin: 0; padding: 0">
     <!-- Start coding below FOR HELLO WORLD TASK -->
+    <p>Hello World</p>
   </body>
 </html>
